# sonas-client

./: .gitignore  README.md  example.py  pyproject.toml
examples/: historical.py  permissions.py  snapshot.py  stream.py
sonas_client/: __init__.py  client.py
