[tool.poetry]
name = "sonas-client"
version = "0.1.0"
description = ""
authors = ["prince-1994 <yuvrajsahu007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
websockets = "^14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
